changed a line on the project page

--- a/projects.html
+++ b/projects.html
@@ -102,7 +102,7 @@
             <div style="color:rgba(255,255,255,.55);font-size:.9rem;">(2025-ongoing)</div>
           </div>
           <div style="color:rgba(255,255,255,.75);font-size:.95rem;margin-top:.25rem;">
-            My first attempt at an independent research focused project: Using reinforcement learning (RL) for image segmentation tasks.
+            Using reinforcement learning (RL) for image segmentation tasks.
           </div>
           <div style="color:rgba(255,255,255,.60);font-size:.9rem;margin-top:.4rem;">
             Stack: Python, PyTorch, Stable-Baselines3, PascalVoc
